[gd_scene load_steps=2 format=3 uid="uid://m84y6mnr8d6"]

[ext_resource type="Script" uid="uid://bxww44pmmgau3" path="res://UI/upgrade_button.gd" id="1_xoo7y"]

[node name="UpgradeButton" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xoo7y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LabelName" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="ButtonBuy" type="Button" parent="HBoxContainer"]
layout_mode = 2
